Bug 162090. Mozilla not respecting SPI_GETWORKAREA when opening new window. Patch by danm. r=aaronl, sr=jst